# async_service

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CODEOWNERS  Dockerfile  README.md  pyproject.toml
.github/workflows/: release-to-ecr.yaml  release-to-jfrog.yaml  release-to-pypi.yaml  test-and-lint.yaml
async_processor/: __init__.py  amqp_pub_sub.py  app.py  kafka_pub_sub.py  logger.py  nats_pub_sub.py  processor.py  prometheus_metrics.py  sqs_pub_sub.py  types.py  worker.py
async_processor/function_service/: README.md  __init__.py  async_function_deployment.py  utils.py
async_processor/sidecar/: __init__.py  sidecar.py  types.py
async_service/: __init__.py  app.py  nats_pub_sub.py  processor.py  prometheus_metrics.py  runner.py  sqs_pub_sub.py  types.py  worker.py
async_service/function_service/: README.md  __init__.py  async_function_deployment.py  fastapi_generator.py  utils.py
examples/: amqp.py  run.sh  test.sh
tests/: dummy_input_output.py  test_create_pydantic_model.py  test_processor.py  test_runner.py  test_types.py  test_worker.py
tests/adhoc_scripts/: openai_client_stream.py
